# linearbuffer

./: CMakeLists.txt  LICENSE  README.md  linerbuffer.c  linerbuffer.h
example/: CMakeLists.txt  main.c
inc/: linearbuffer.h
src/: linearbuffer.c
test/: CMakeLists.txt  tc.cpp
